[gd_scene load_steps=4 format=3 uid="uid://57j2ypina71e"]

[ext_resource type="Script" path="res://scenes/latte_art.gd" id="1_mfeni"]
[ext_resource type="Texture2D" uid="uid://bnyfikjx2dnxk" path="res://resources/frame.png" id="2_slnxm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lq18r"]
size = Vector2(270, 96)

[node name="Latte_art" type="Node2D"]
script = ExtResource("1_mfeni")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-22, -90)
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1013, 630)
shape = SubResource("RectangleShape2D_lq18r")

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(1013, 630)
scale = Vector2(0.527344, 0.305732)
texture = ExtResource("2_slnxm")

[node name="Arrows" type="Node2D" parent="."]

[node name="arrow_start" type="Marker2D" parent="."]
position = Vector2(995, -24)

[node name="SpaceBetweenArrows" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="SpaceBetweenArrows" to="." method="_on_space_between_arrows_timeout"]
